<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="editMark"
            type="ir.aliprogramer.schoolhomemvvm.ViewModel.EditAndDeleteMarkViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edith_mark_mess"
            android:textStyle="bold"
            android:background="@color/buttonColor"
            android:textColor="@color/black"
            android:layout_marginBottom="18dp"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="@{editMark.markError}"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={editMark.mark}"
                    android:focusedByDefault="false"
                    android:inputType="number"
                    android:hint="@string/mark"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="@{editMark.descriptionError}"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="false"
                   android:text="@={editMark.description}"
                    android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:onClick="@{()->editMark.update()}"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/edith" />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->editMark.delete()}"
                android:layout_marginRight="6dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/delete" />
            <android.support.v7.widget.AppCompatButton
                android:onClick="@{()->editMark.cancel()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/no" />
        </LinearLayout>


    </LinearLayout>
</layout>