<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="register"
            type="ir.aliprogramer.schoolhomemvvm.ViewModel.registerViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/loginBackground"
        android:layoutDirection="rtl"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/registerimg"
                android:id="@+id/board"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="@{register.userNameError}"
                app:errorEnabled="true"
                android:textColorHint="@color/textColor"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:inputType="number"
                    android:text="@={register.userName}"
                    android:hint="@string/username"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor"
                app:passwordToggleEnabled="true"
                app:error="@{register.passwordError}"
                app:errorEnabled="true"
                android:layout_margin="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={register.password}"
                    android:textColor="@color/textColor"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor"
                app:error="@{register.confirmPasswordError}"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_margin="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={register.confirmPassword}"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:hint="@string/confirmpassword"/>
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@={register.radio_checked}"
                android:layout_gravity="right" android:layout_margin="20dp">
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent"
                    android:checked="true"
                    android:id="@+id/parentst"
                    android:layout_marginRight="20dp"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher"
                    android:id="@+id/teacher"
                    android:layout_marginRight="10dp" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"

                android:orientation="vertical">
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->register.btnRegister()}"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/buttonColor"
                    android:text="@string/register"/>
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->register.btnCancel()}"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/buttonColor"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>