<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="login"
            type="ir.aliprogramer.schoolhomemvvm.ViewModel.LoginViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/loginBackground"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/board"
                android:id="@+id/board"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="@{login.userNameError}"
                app:errorEnabled="true"
                android:textColorHint="@color/textColor"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:inputType="number"
                    android:text="@={login.userName}"
                    android:hint="@string/username"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColor"
                app:passwordToggleEnabled="true"
                app:error="@{login.passwordError}"
                app:errorEnabled="true"
                android:layout_margin="20dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={login.password}"
                    android:textColor="@color/textColor"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:layout_margin="20dp"
                android:text="@string/login"
                android:onClick="@{()->login.btnLogin()}"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/register"
                android:onClick="@{()->login.btnRegister()}"/>
        </LinearLayout>

    </ScrollView>

</layout>